[metadata]
name = skeleton_keychain
version = attr: skeleton_keychain.__version__

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    run_features = skeleton_keychain.run_feature_pipeline:console_script
    qc_swc_image = skeleton_keychain.quality_control_swc_files:console_script
